# OC_lab5

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_win.bat  logger_start.sh  logger_start_speed.sh  simulator_start.sh  win_logger_start.bat  win_logger_start_speed.bat  win_simulator_start.bat
client/: .env  app.py
client/templates/: index.html
src/: agregator.cpp  agregator.hpp  http.cpp  http.hpp  line_reader.hpp  retention.cpp  retention.hpp  serial_reader.cpp  serial_writer.cpp  serial_writer.hpp  sqlite_db.cpp  sqlite_db.hpp  sqlite_repo.cpp  sqlite_repo.hpp  stdin_reader.cpp  temp_logger_main.cpp  temp_server_main.cpp  temp_simulator_main.cpp  timeutil.cpp  timeutil.hpp
